# Cytoskeleton Analyser setup configuration.

[metadata]
name = cytoskeleton-analyser
version = attr: cytoskeleton_analyser.__version__
url = https://github.com/vsukhor/cytoskeleton-analyser
project_urls =
    Source Code = https://github.com/vsukhor/cytoskeleton-analyser
license = BSD-3-Clause
author = Valerii Sukhorukov
author_email = vsukhorukov@yahoo.com
maintainer = Valerii Sukhorukov
maintainer_email = vsukhorukov@yahoo.com
description = Examines simulated cell microtubules
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Bio-Informatics
keywords =
    computational biology
    cytoskeleton
    cell
    data analysis

[options]
packages = find:
package_dir =
    = .
#cytoskeleton-analyser
include_package_data = true
python_requires = >= 3.9
# Dependencies are in setup.py for GitHub's dependency graph.
